--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <!--TITLE-->
-  <title>HOME</title>
+  <title>UAYO HOME</title>
 
   <!--ICON-->
   <link rel="shortcut icon" href="images/logo.png">
@@ -52,19 +52,19 @@
       <ul class="nav navbar-nav navbar-right ">
         <li><a href="index.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px; font-weight: 250; padding: 15px 15px 15px 15px;"><b>HOME</b></a></li>
         <li><a href="aboutus.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px; font-weight: 250; padding: 15px 15px 15px 15px;"><b>ABOUT US</b></a></li>
-        <li><a href="volunteers.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px; font-weight: 250; padding: 15px 15px 15px 15px;"><b>VOLUNTEERS</b></a></li>
+        <li><a href="volunteers.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px; font-weight: 250; padding: 15px 15px 15px 15px;"><b>Get Involved</b></a></li>
   
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white;  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>GALLERY</b><span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white;  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>Events</b><span class="caret"></span></a>
           <ul class="dropdown-menu" style="background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%); ">
-            <li><a href="photos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>PHOTOS</b></a></li>
-            <li><a href="videos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>VIDEOS</b></a></li>
+            <li><a href="photos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>AgriJenga</b></a></li>
+            <li><a href="videos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>AgriMtaani</b></a></li>
           </ul>
         </li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white;  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>WHAT WE DO?</b><span class="caret"></span></a>
             <ul class="dropdown-menu" style="background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%); ">
-              <li><a href="events.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>EVENTS</b></a></li>
+              <li><a href="events.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>Youth Summit</b></a></li>
               <li><a href="projects.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>PROJECTS</b></a></li>
-              <li><a href="corona.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b> COVID 19</b></a></li>
+              <li><a href="corona.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b> Peace Initiative</b></a></li>
             </ul>
           </li>
         <li><a href="contactus.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>CONTACT US</b></a></li>
@@ -82,9 +82,7 @@
       <tr>
         <td>
           <section>
-      
-            <h1 class="title">SHREE GURU JAMBESHWAR SEWA SANSTHAN</h1>
-            <p>SHREE GURU JAMBESHWAR SEWA SANSTHAN <br> is a sewa trust that serves the people.</p>
+
           </section>
         </td>
         <td>
@@ -98,7 +96,7 @@
   <!--CARDS-->
   <section class="section0" id="sections">
     <div class="card banner">
-      <h1 class="title">Our Featured Services</h1>
+      <h1 class="title">Background</h1>
       <h5 class="sub-title">The Upcoming African Youth Organization (U.A.Y.O.) is a grassroots youth-led youth-serving
         organization that focuses on youth reform through the disengagement and reintegration
         process. The organization aims at build a better and more habitable community founded on the
@@ -236,19 +234,19 @@
   <div class="container" style="margin-top: 40px;">
   <div class="row">
     <div class="col-md-4 col-sm-12 col-xs-12 bg-info img-thumbnail">
-      <h5>Our Program</h5>
-            <p>Our Main Program is to provide Agriculture Support, Child welfare, Rural Education,
-              Women Empowerment, Skill Devlopment </p>
+      <h5>Goal and Objectives</h5>
+            <p>The organization's drive to achieve goals and objectives, namely: A crime-free society,
+              increasing the rate of youth employability, promoting a culture of tolerance and perseverance;
+              promoting the culture of education; utilizing art and culture to disseminate information.</p>
     </div>
     <div class="col-md-4 col-sm-12 col-xs-12 bg-info img-thumbnail">
       <h5>Our Mission</h5>
-            <p class="card-text">Our Mission is to serve the people who are needy and had impeccable progress on
-              activities and successfully obtaining a better life.</p>
+            <p class="card-text">Creating platforms that maximize their skills and potential through resilience and commitment..</p>
     </div>
     <div class="col-md-4 col-sm-12 col-xs-12 bg-info img-thumbnail">
       <h5>Contact Us</h5>
-            <p>2/69 Apple residency, Chitrakoot, Vaishali Nagar, jaipur Raj. 302021 <br>
-              Ph no - 9414334192 </p>
+            <p> Email: upcomingafricanyouthorg@gmail.com FB: UPCOMINGAFRICAN YOUTH ORGANIZATION
+              TWEETER:@Upcomingafricanyouthorganization IG: #UPCOMINGAFRICANYOUTHORGANIZATION</p>
     </div>
   </div>
 </div>
@@ -269,7 +267,7 @@
 
                 <div class="grid-item"><a href="index.html">Home</a></div>
                 <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                <div class="grid-item"><a href="http://sgjss.co.in/">Sgjss.co.in</a></div><br>
+                <div class="grid-item"><a href="http://sgjss.co.in/"></a></div><br>
                 <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                 <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                 <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -287,7 +285,7 @@
           </div>
           <hr>
 
-          <p style="text-align: center;">Copyright © 2021 SGJSS | All rights reserved</p>
+          <p style="text-align: center;">Copyright © 2023 UAYO | All rights reserved</p>
 
       </div>
   </footer>
