--- a/aboutus.html
+++ b/aboutus.html
@@ -225,7 +225,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="img_about mt-3"> 
-                        <img src="images/Certificate.jpg" alt="" height="430"  class="img-fluid mx-auto d-block">
+                        <!-- <img src="images/Certificate.jpg" alt="" height="430"  class="img-fluid mx-auto d-block"> -->
                     </div>
                 </div>
             </div>
@@ -239,14 +239,11 @@
                             </div>
                             <h5 class="text-dark text-capitalize mt-3 font-weight-bold">Organisational structure</h5>
                             <p class="edu_desc mt-3 mb-0 text-muted" style="color: black;">
-                                SGJSS believes in multiplying its efforts through collaboration &
-                                partnerships
-                                that bring together government, non-government, and corporate in a
-                                collaborative
-                                process for socio-economic development, improving agriculture, environment,
-                                health, and women empowerment. SGJSS puts a lot of emphasis on upgrading the
-                                skills and capacities of its staff. For this purpose, need-based training is
-                                regularly organized</p>
+                                The Upcoming African Youth Organization (U.A.Y.O.) is a grassroots youth-led youth-serving
+organization that focuses on youth reform through the disengagement and reintegration
+process. The organization aims at build a better and more habitable community founded on the
+hard work of young people. U.A.Y.O has been working to transform the lives of young people,
+building their capacity and improving the</p>
                         </div>
                     </div>
                 </div>
@@ -258,9 +255,8 @@
                                 <i class="far fa-eye"></i>
                             </div>
                             <h5 class="text-dark text-capitalize mt-3 font-weight-bold">Vision</h5>
-                            <p class="edu_desc mb-0 mt-3 text-muted" style="color: black;">We aim to create a development revolution for the
-                                marginalized and
-                                socio-economically weaker sections of society. </p>
+                            <p class="edu_desc mb-0 mt-3 text-muted" style="color: black;">A society in which youth are empowered to use their skills and potential to improve their living
+                                conditions and promote peaceful coexistence. </p>
                         </div>
                     </div>
                 </div>
@@ -272,10 +268,7 @@
                                 <i class="fas fa-paper-plane"></i>
                             </div>
                             <h5 class="text-dark text-capitalize mt-3 font-weight-bold">Mission</h5>
-                            <p class="edu_desc mb-0 mt-3 text-muted" style="color: black;">Our mission is the creation of such a society where
-                                nobody is deprived of
-                                the main current of development. We are determined for the establishment of
-                                that society in which everybody possesses ‘Human rights’ with dignity.</p>
+                            <p class="edu_desc mb-0 mt-3 text-muted" style="color: black;">Creating platforms that maximize their skills and potential through resilience and commitment.</p>
                         </div>
                     </div>
                 </div>
@@ -298,7 +291,7 @@
   
                   <div class="grid-item"><a href="index.html">Home</a></div>
                   <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                  <div class="grid-item"><a href="http://sgjss.co.in/">Sgjss.co.in</a></div><br>
+                  <div class="grid-item"><a href="http://sgjss.co.in/"></a></div><br>
                   <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                   <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                   <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -316,7 +309,7 @@
             </div>
             <hr>
   
-            <p style="text-align: center;">Copyright © 2021 SGJSS | All rights reserved</p>
+            <p style="text-align: center;">Copyright © 2023 UAYO | All rights reserved</p>
   
         </div>
     </footer>
