--- a/contactus.html
+++ b/contactus.html
@@ -129,9 +129,10 @@
         <div class="col2 column2 last">
           <div class="sec2innercont">
             <div class="sec2addr">
-              <p>A2/69 Apple Anemone Chitrakoot, Vaishali Nagar, Jaipur, Rajasthan 302021</p>
-              <p><span class="collig">Phone :</span> +91 9414334192</p>
-              <p><span class="collig">Email :</span> info@sgjss.org</p>
+              <p>Email: upcomingafricanyouthorg@gmail.com FB: UPCOMINGAFRICAN YOUTH ORGANIZATION
+                TWEETER:@Upcomingafricanyouthorganization IG: #UPCOMINGAFRICANYOUTHORGANIZATION</p>
+              <p><span class="collig">Phone :</span> +254759735505</p>
+              <p><span class="collig">Email :</span> upcomingafricanyouthorg@gmail.com </p>
             </div>
           </div>
           <div class="sec2contactform">
@@ -174,7 +175,7 @@
 
                 <div class="grid-item"><a href="index.html">Home</a></div>
                 <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                <div class="grid-item"><a href="http://sgjss.co.in/">Sgjss.co.in</a></div><br>
+                <div class="grid-item"><a href="http://sgjss.co.in/"></a></div><br>
                 <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                 <div class="grid-item"><a href="volunteersForm.html">Join Our Community</a></div>
                 <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -192,7 +193,7 @@
           </div>
           <hr>
 
-          <p style="text-align: center;">Copyright © 2021 SGJSS | All rights reserved</p>
+          <p style="text-align: center;">Copyright © 2023 UAYO | All rights reserved</p>
 
       </div>
   </footer>
