--- a/donation.html
+++ b/donation.html
@@ -46,10 +46,10 @@
         <li><a href="aboutus.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px; font-weight: 250; padding: 15px 15px 15px 15px;"><b>ABOUT US</b></a></li>
         <li><a href="volunteers.html" style="color:white; font-family: 'Quicksand', sans-serif;font-size: 18px; font-weight: 250; padding: 15px 15px 15px 15px;"><b>VOLUNTEERS</b></a></li>
   
-        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white;  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>GALLERY</b><span class="caret"></span></a>
+        <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white;  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>Events</b><span class="caret"></span></a>
           <ul class="dropdown-menu" style="background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%); ">
-            <li><a href="photos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>PHOTOS</b></a></li>
-            <li><a href="videos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>VIDEOS</b></a></li>
+            <li><a href="photos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>AgriJenga</b></a></li>
+            <li><a href="videos.html" style="color:white; background-color: #2a2a72;background-image: linear-gradient(315deg, #2a2a72 0%, #009ffd 74%);  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 5px 50px 5px 50px;"><b>AgriMtaani</b></a></li>
           </ul>
         </li>
         <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#" style="color:white;  font-family: 'Quicksand', sans-serif;font-size: 18px;font-weight: 250; padding: 15px 15px 15px 15px;"><b>WHAT WE DO?</b><span class="caret"></span></a>
@@ -72,13 +72,13 @@
     <img id="xs" class="img-responsive visible-xs" src="images/donate.png" alt="">
 
     <div class="div1">
-      <h1 class="head1">SGJSS – ALL INDIA 80G Certified NGO</h1>
-      <p>DONATE ONLINE – Your donation help us to Feed Hungry Children, Provide Free Education and Scholarships, Keep
-        India Clean and Green. Get your Instant 80G Tax Benefit Donation Receipt after making the successful payment.
-      </p>
+      <h1 class="head1">UAYO</h1>
+      <p>Your generous contribution can make a life-changing impact in the lives of 
+        vulnerable youths. Join us in empowering the next generation by donating
+         today and creating a brighter future together</p>
     </div>
     <div class="div2">
-      <h5>All donations to Sgjss are 50% Tax Exempt under <a
+      <h5>All donations to UAYO are 50% Tax Exempt under <a
           href="https://drive.google.com/file/d/1E0p21lE9q8hE22nsa2Aed-ojfjX7eLaP/view" target="_blank"> Section 80G
         </a></h5>
     </div>
@@ -88,7 +88,7 @@
       <div class="row">
         <div class="col-md-4 col-sm-6"></div>
         <div class="col-md-4 col-sm-6">
-          <img class="img-responsive img-rounded" src="images/icici.png">
+          <img class="img-responsive img-rounded" src="images/logo.png">
         </div>
         <div class="col-md-4 col-sm-6"></div>
       </div>
@@ -98,13 +98,12 @@
       <div class="row">
         
         <div class="col-md-6">
-          <h3>Account Name: Shree Guru Jambeshwar Sewa Sansthan <br>
+          <h3>Account Name: Nelson Tommogo <br>
 
-            Account Number: 023501002043 <br>
+            Account Number: 012345678 <br>
 
-            IFSC Code: ICIC0000235 <br>
 
-            Bank Name: ICICI Bank Ltd. <br>
+            Bank Name: National Bank Ltd. <br>
 
             Account type: Saving <br>
           </h3>
@@ -139,7 +138,7 @@
 
                 <div class="grid-item"><a href="index.html">Home</a></div>
                 <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                <div class="grid-item"><a href="http://sgjss.co.in/">Sgjss.co.in</a></div><br>
+                <div class="grid-item"><a href="http://sgjss.co.in/"></a></div><br>
                 <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                 <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                 <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -157,7 +156,7 @@
           </div>
           <hr>
 
-          <p style="text-align: center;">Copyright © 2021 SGJSS | All rights reserved</p>
+          <p style="text-align: center;">Copyright © 2023 UAYO | All rights reserved</p>
 
       </div>
   </footer>
