--- a/index.html
+++ b/index.html
@@ -96,17 +96,17 @@
   <!--CARDS-->
   <section class="section0" id="sections">
     <div class="card banner">
-      <h1 class="title">Background</h1>
-      <h5 class="sub-title">The Upcoming African Youth Organization (U.A.Y.O.) is a grassroots youth-led youth-serving
-        organization that focuses on youth reform through the disengagement and reintegration
-        process. The organization aims at build a better and more habitable community founded on the
-        hard work of young people. U.A.Y.O has been working to transform the lives of young people,
-        building their capacity and improving their competency by creating platforms that offer them
-        space to practice positive development.</h5>
+      <h1 class="title"></h1>
+      <h5 class="sub-title">"Welcome to the Upcoming African Youth Organization (U.A.Y.O.)! 
+        We are a grassroots, youth-led organization dedicated to transforming the lives of young individuals and 
+        building a better future. At U.A.Y.O., we believe in the power of disengagement and reintegration to 
+        create a crime-free society. Our programs focus on increasing youth employability, promoting a culture 
+        of tolerance and perseverance, and utilizing art and culture to disseminate information. We are committed 
+        to providing platforms that empower young people to maximize their skills and potential, enabling them to create positive change in their communities. Join us on this journey towards a brighter tomorrow!"</h5>
     </div>
     <div class="card inline-photo show-on-scroll">
       <i class="fas fa-child"></i>
-      <h3>Child Welfare</h3>
+      <h3>Youth Welfare</h3>
     </div>
     <div class="card inline-photo show-on-scroll">
       <i class="fas fa-female"></i>
@@ -114,15 +114,15 @@
     </div>
     <div class="card inline-photo show-on-scroll">
       <i class="fas fa-school"></i>
-      <h3>Education</h3>
+      <h3>Crime Prevention</h3>
     </div>
     <div class="card inline-photo show-on-scroll">
       <i class="fas fa-briefcase-medical"></i>
-      <h3>Free Health Checkups</h3>
+      <h3>Digital Skills</h3>
     </div>
     <div class="card inline-photo show-on-scroll">
       <i class="fas fa-tree"></i>
-      <h3>Environment</h3>
+      <h3>Environment Conservation</h3>
     </div>
     <div class="card inline-photo show-on-scroll">
       <i class="fas fa-tractor"></i>
@@ -148,11 +148,11 @@
               <ul>• Agriculture</ul>
               <ul>• Youths</ul>
               <ul>• Education</ul>
-              <ul>• Environment</ul>
+              <ul>• Environment Conservation</ul>
               <ul>• Health</ul>
               <ul>• Women Empowerment</ul>
               <ul>• Old Age Welfare</ul>
-              <ul>• Skills Development</ul>
+              <ul>• Digital Skills Development</ul>
 
             </li>
           </p>
@@ -174,19 +174,34 @@
         <td>
           <ul style="padding-left: 5%;">
             <li>
-              <h3>Women Empowerment</h3>
-              <p>In agrarian society male-female are like Beljodi of Hal (Bullock pair of a plough). In such situation
-                both ...<a href="projects.html" style="color: blue;">Read More  </a>
+              <h3>Tangulisha Mabadiliko</h3>
+              <p>The program focuses on mentoring and supporting young people to understand themselves and
+                build their capacity to deal with issues that affect them at a personal level and how to overcome
+                them. It also focuses on matters that relate to skills, talents, and passion as a way of engaging
+                young people and enabling them to earn a living. The program do conduct projects such as
+                health-related, educational-related, character development-related, entrepreneurship training,
+                skills training, and talent workshops. The program targets schools, community members, and
+                correctional centers as the primary target audience.<a href="#" style="color: blue;">Read More  </a>
               </p>
             </li>
             <li>
-              <h3>Education</h3>
-              <p>We believe that the purpose of education is to make the child a self-motivated and independent learner . . . <a href="projects.html" style="color: blue;">Read More</a></p>
+              <h3>Agri-Jenga (AJ)</h3>
+              <p>The program focuses on the agricultural sector as a way of creating opportunity to young people
+                as a form of disengaging themselves and a soft power for reintegration process. The program
+                focuses on alternative way of earning a living without relying on white-collar jobs. It is based on
+                projects such as animal rearing, fruit planting, and crop farming. It also checks on modern ways
+                of practicing agriculture and improving agricultural practices with the lead of youths. The
+                program targets institutions and communities in both urban and rural areas<a href="#" style="color: blue;">Read More</a></p>
             </li>
             <li>
-              <h3>Free Health Checkups, RCH Camps & Vaccination</h3>
-              <p>Due to lack of hygienic awareness, poor sanitation, bad drinking water quality, gender issues,
-                superstitions . . .<a href="projects.html" style="color: blue;">Read More</a></p>
+              <h3>Making the Environment Reliable (MER)</h3>
+              <p>The program focuses on the environmental sector as a way of making the community better and
+                more habitable for living creatures through advocating for climate action in ending global
+                warming and embracing projects such as proper waste management and disposal, tree planting,
+                and recycling. It emphasizes on taking responsibility in matters related to reducing the rate of
+                pollution, such as air pollution, water pollution, and land pollution, through working together in
+                transforming. The program has been working with community members, institutions, and
+                individual.<a href="#" style="color: blue;">Read More</a></p>
             </li>
           </ul>
         </td>
@@ -211,17 +226,30 @@
         <td>
           <ul style="padding-left: 5%;">
             <li>
-              <h3>Child Welfare </h3>
-              <p>SGJSS aims towards lasting improvements in the quality of life of disadvantage and marginalised
-                children . . .<a href="projects.html" style="color: blue;">Read More</a></p>
+              <h3>Community Peace Iniatives</h3>
+              <p>U.A.Y.O. actively engages in promoting peace and resolving conflicts within the community. 
+                This can involve organizing peace dialogues, mediation sessions, and workshops on conflict resolution and 
+                intergroup understanding. U.A.Y.O. works closely with community leaders, stakeholders, and
+                 local organizations to create platforms for dialogue, foster empathy, and build bridges between 
+                 different groups. By actively participating in community peace initiatives,
+                 U.A.Y.O. strives to cultivate an environment of peace, understanding, and unity.<a href="" style="color: blue;">Read More</a></p>
             </li>
             <li>
-              <h3>Environment</h3>
-              <p>The forests of India are ancient in nature and composition. SGJSS is providing wildlife education . . .<a href="projects.html" style="color: blue;">Read More</a></p>
+              <h3>Sustainable Environmental Initiatives</h3>
+              <p> U.A.Y.O. can actively engage in activities aimed at promoting environmental sustainability
+                 and conservation. This can include organizing tree planting campaigns, beach clean-ups, recycling drives, 
+                 and educational programs on climate change and environmental stewardship. By encouraging young 
+                 individuals to take an active role in protecting and preserving the environment, U.A.Y.O. 
+                contributes to building a greener and more sustainable future<a href="#" style="color: blue;">Read More</a></p>
             </li>
             <li>
-              <h3>Agricultural Program</h3>
-              <p>Farming has always been one of the most important economic activities in India. With about two-thirds . . .<a href="projects.html" style="color: blue;">Read More</a></p>
+              <h3>Digital Skills Training for Vulnerable Youths:</h3>
+              <p>U.A.Y.O. focuses on providing digital skills training to vulnerable youths in the society. 
+                This can include offering courses or workshops on computer literacy, coding, digital marketing, 
+                graphic design, and other relevant skills that are in demand in today's digital age. By equipping vulnerable 
+                youths with digital skills, U.A.Y.O. empowers them to access better educational and employment opportunities, 
+                bridge the digital divide, and 
+                enhance their overall digital literacy.<a href="" style="color: blue;">Read More</a></p>
             </li>
           </ul>
         </td>
@@ -267,7 +295,7 @@
 
                 <div class="grid-item"><a href="index.html">Home</a></div>
                 <div class="grid-item"><a href="projects.html">Our Projects</a></div>
-                <div class="grid-item"><a href="http://sgjss.co.in/"></a></div><br>
+                <div class="grid-item"><a href="#"></a></div><br>
                 <div class="grid-item"><a href="privacy.html">Privacy Policy</a></div>
                 <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                 <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
@@ -275,11 +303,11 @@
 
                <div class="grid-item">
               <div class = "social-buttons" style="float:left;">
-                  <a href= "https://www.instagram.com/sgjss_29/" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
-                  <a href= "https://www.facebook.com/pg/shreegurujambheswarsevasansthan/photos/?ref=page_internal" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
-                  <a href= "https://api.whatsapp.com/send/?phone=919414334192&text&app_absent=0" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
-                  <a href= "https://www.linkedin.com/in/shree-guru-jambeshwar-sewa-sansthan-1106651b3/" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
-                  <a href= "https://twitter.com/guru_sansthan" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
+                  <a href= "" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
               </div>
           </div>  
           </div>
