--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
   <link rel="stylesheet" href="home.css">
   <link rel="stylesheet" href="style.css">
 
-
+  <link rel="icon" type="image/x-icon" href="images/logo.png"/>
   <!-- Bootstrap 3.4.1 -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css" integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
 
   <!--PLUGIN-->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 
 
   <!--FONT AWESOME-->
