--- a/community.html
+++ b/community.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="img_about mt-3"> 
-                        <img src="images/peace.jpeg" alt="" height="430" class="img-fluid mx-auto d-block">
+                        <img src="images/peace.jpg" alt="" height="430" class="img-fluid mx-auto d-block">
                     </div>
                 </div>
             </div>
