--- a/aboutus.html
+++ b/aboutus.html
@@ -78,7 +78,7 @@
                     <div class="section_title_all text-center">
                         <h2 style="color: blue;"><b>Welcome To Our Organisation</b>
                         </h2>
-                        <h4>Shree Guru Jambeshwar Sewa Sansthan</h4>
+                        <h4>Upcoming Africa Youth Organization</h4>
                         <div class="">
                             <i class=""></i>
                         </div>
@@ -90,35 +90,21 @@
                 <div class="col-lg-6">
                     <div class="about_header_main mt-3">
                         <h4 class="about_heading text-capitalize font-weight-bold mt-4">About Our Organisation</h4>
-                        <p class="text-muted mt-3" style="color: black;">Shree Guru Jambeshwar Sewa Sansthan is a non-governmental
-                            organization
-                            based
-                            in Rajasthan founded in the year 2007, working on an issue affecting the urban and rural
-                            mass, with a special issue on Education, Agriculture, Environment, Health & Women
-                            Empowerment. The SGJSS is trying hard with the community – based efforts to improve the
-                            living condition of the deprived section of society. The SGJSS team comprises of people
-                            from
-                            multidisciplinary and multi-sector backgrounds across the Rajasthan that share a common
-                            platform of thinking and do their bit towards the making of a cognitive society, to
-                            intending to put collective efforts to work together and gather people who find
-                            themselves
-                            inspired to uplift the lives of those people who grow with inadequate education, health
-                            care, resources, and psychological support – several calls them as “underprivileged”..
-                        </p>
-                        <p class="text-muted mt-3" style="color: black;">A Governing Committee consisting of 9 persons elected democratically
-                            by its
-                            General Body governs SGJSS. Elections on the board are held every five
-                            years.
-                            SGJSS runs on a fully decentralized management system headed by the
-                            Secretary,
-                            who is supported by a cadre of professional and administrative staff.
-
-                            Program and performances are monitored on a regular basis in quarterly
-                            review
-                            and planning meetings. Eminent experts from the field of management,
-                            agriculture, environment, health, women empowerment, and social work, etc.
-                            are
-                            invited to these meetings.
+                        <p class="text-muted mt-3" style="color: black;">The Upcoming African Youth Organization (U.A.Y.O.) is a grassroots youth-led 
+                            youth-serving organization committed to empowering young people and driving positive change in their 
+                            communities. Our organization is dedicated to youth reform through disengagement and reintegration
+                             processes, with the aim of creating a better and more habitable community built upon the hard work and 
+                             resilience of young individuals. At U.A.Y.O., we firmly believe in harnessing the potential and maximizing 
+                             the skills of youth, all while promoting values of resilience and commitment.</p>
+                        <p class="text-muted mt-3" style="color: black;">
+                            Through a diverse range of programs and initiatives, U.A.Y.O. works tirelessly to 
+                            transform the lives of young individuals. We offer digital skills training, engage in
+                             community service projects, promote peace-building activities, and actively participate in 
+                             sustainable environmental initiatives. Our ultimate vision is to foster a society where youth are 
+                             empowered to enhance their living conditions and promote peaceful coexistence. By collaborating with 
+                             young individuals and emphasizing inclusivity, U.A.Y.O. strives to create lasting impact and contribute
+                              to the holistic development of individuals and communities. Together, we can build a brighter future 
+                              for the upcoming generation in Africa and beyond.
                         </p>
                     </div>
                 </div>
