--- a/community.html
+++ b/community.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>COVID 19</title>
+    <title>Community Services</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="images/logo.png">
