--- a/contactus.html
+++ b/contactus.html
@@ -4,10 +4,8 @@
 <head>
   <title>CONTACT US</title>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" href="images/logo.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style3.css">
@@ -22,10 +20,6 @@
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
   <!--GOOGLE FONTS-->
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link
-    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Fredoka+One&family=Kanit:wght@300&display=swap"
-    rel="stylesheet">
 </head>
 <style>
   @-webkit-keyframes fade {
@@ -101,7 +95,7 @@
       </section>
 
       <section class="section2 clearfix">
-        <div class="col2 column1 first">
+        <!-- <div class="col2 column1 first">
           <div class="mapouter">
             <div class="gmap_canvas"><iframe width="400" height="410" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=A2/69%20Apple%20Anemone%20Chitrakoot,%20Vaishali%20Nagar,%20Jaipur,%20Rajasthan%20302021&t=&z=13&ie=UTF8&iwloc=&output=embed"
@@ -125,7 +119,7 @@
               </style>
             </div>
           </div>
-        </div>
+        </div> -->
         <div class="col2 column2 last">
           <div class="sec2innercont">
             <div class="sec2addr">
