--- a/contactus.html
+++ b/contactus.html
@@ -4,8 +4,10 @@
 <head>
   <title>CONTACT US</title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="icon" href="images/logo.png">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style3.css">
@@ -20,6 +22,10 @@
   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
   <!--GOOGLE FONTS-->
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Fredoka+One&family=Kanit:wght@300&display=swap"
+    rel="stylesheet">
 </head>
 <style>
   @-webkit-keyframes fade {
@@ -95,31 +101,6 @@
       </section>
 
       <section class="section2 clearfix">
-        <!-- <div class="col2 column1 first">
-          <div class="mapouter">
-            <div class="gmap_canvas"><iframe width="400" height="410" id="gmap_canvas"
-                src="https://maps.google.com/maps?q=A2/69%20Apple%20Anemone%20Chitrakoot,%20Vaishali%20Nagar,%20Jaipur,%20Rajasthan%20302021&t=&z=13&ie=UTF8&iwloc=&output=embed"
-                frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a
-                href="https://kissanime-ws.com">kissanime</a><br>
-              <style>
-                .mapouter {
-                  position: relative;
-                  text-align: right;
-                  height: 410px;
-                  width: 350px;
-                }
-              </style><a href="https://google-map-generator.com">map generator</a>
-              <style>
-                .gmap_canvas {
-                  overflow: hidden;
-                  background: none !important;
-                  height: 400px;
-                  width: 320px;
-                }
-              </style>
-            </div>
-          </div>
-        </div> -->
         <div class="col2 column2 last">
           <div class="sec2innercont">
             <div class="sec2addr">
@@ -177,11 +158,11 @@
 
                <div class="grid-item">
               <div class = "social-buttons" style="float:left;">
-                  <a href= "https://www.instagram.com/sgjss_29/" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
-                  <a href= "https://www.facebook.com/pg/shreegurujambheswarsevasansthan/photos/?ref=page_internal" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
-                  <a href= "https://api.whatsapp.com/send/?phone=919414334192&text&app_absent=0" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
-                  <a href= "https://www.linkedin.com/in/shree-guru-jambeshwar-sewa-sansthan-1106651b3/" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
-                  <a href= "https://twitter.com/guru_sansthan" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
+                  <a href= "" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
               </div>
           </div>  
           </div>
@@ -213,7 +194,7 @@
 
 			Email.send({
         SecureToken:"fbf31702-bb7f-4a4e-9c1c-4ccf17ee777f",
-				To: 'maheshdbabar9340@gmail.com',
+				To: 'upcomingafricanyouthorg@gmail.com',
 				From: email,
 				Subject: "New message on contact from "+name,
 				Body: Body
