--- a/donation.html
+++ b/donation.html
@@ -78,9 +78,7 @@
          today and creating a brighter future together</p>
     </div>
     <div class="div2">
-      <h5>All donations to UAYO are 50% Tax Exempt under <a
-          href="https://drive.google.com/file/d/1E0p21lE9q8hE22nsa2Aed-ojfjX7eLaP/view" target="_blank"> Section 80G
-        </a></h5>
+      <h5>All donations to UAYO are 50% Tax Exempt under</h5>
     </div>
 
     <h1 class="head2">BANK ACCOUNT DETAILS</h1>
@@ -99,43 +97,27 @@
         
         <div class="col-md-6">
           <h3>Account Name: Nelson Tommogo <br>
-
             Account Number: 012345678 <br>
-
-
             Bank Name: National Bank Ltd. <br>
-
             Account type: Saving <br>
           </h3>
         </div>
-        <div class="col-md-6">
-          <img src="images/qrcode.jpeg" height="350px" width="300" style="padding-top: 15%;">
-        </div>
       </div>
     </div>
-
-    <h3 style="color: blue; font-family: Georgia, 'Times New Roman', Times, serif;">OR</h3>
-
+    <h3 style="color: blue; font-family: Georgia, 'Times New Roman', Times, serif; align-items: center; text-align: center;">OR</h3>
     <br><br>   <br><br>
     <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Go3nufVrD1W0GZ" async> </script> </form>
     <br><br>   <br><br>
     <h4 class="quote">The measure of life is not its duration, but its donation.</h4>
     <h6 class="quote-name">~ Peter Marshall</h6>
-
-
     <!-- Site footer -->
     <footer class="site-footer">
       <div class="container">
-
           <div class="grid-container">
               <div class="grid-item">
-
                   <img src="images/logo.png" class="logo-img" style="border-radius: 50%;">
-
               </div>
-
               <div class="grid-item inner-grid-container">
-
                 <div class="grid-item"><a href="index.html">Home</a></div>
                 <div class="grid-item"><a href="projects.html">Our Projects</a></div>
                 <div class="grid-item"><a href="http://sgjss.co.in/"></a></div><br>
@@ -143,29 +125,22 @@
                 <div class="grid-item"><a href="volunteersForm.html">Join Us</a></div>
                 <div class="grid-item"><a href="contactus.html">Contact Us</a></div>
             </div>
-
                <div class="grid-item">
               <div class = "social-buttons" style="float:left;">
-                  <a href= "https://www.instagram.com/sgjss_29/" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
-                  <a href= "https://www.facebook.com/pg/shreegurujambheswarsevasansthan/photos/?ref=page_internal" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
-                  <a href= "https://api.whatsapp.com/send/?phone=919414334192&text&app_absent=0" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
-                  <a href= "https://www.linkedin.com/in/shree-guru-jambeshwar-sewa-sansthan-1106651b3/" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
-                  <a href= "https://twitter.com/guru_sansthan" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-instagram circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-facebook circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-whatsapp circle-icon"></i></a><br>
+                  <a href= "" target="_blank"><i class="fab fa-linkedin-in circle-icon"></i></a>
+                  <a href= "" target="_blank"><i class="fab fa-twitter circle-icon"></i></a>
               </div>
           </div>  
           </div>
           <hr>
-
           <p style="text-align: center;">Copyright © 2023 UAYO | All rights reserved</p>
-
       </div>
   </footer>
-
-
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
     integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
     crossorigin="anonymous"></script>
-
 </body>
-
 </html>
