--- a/donation.html
+++ b/donation.html
@@ -74,7 +74,7 @@
     <div class="div1">
       <h1 class="head1">UAYO</h1>
       <p>Your generous contribution can make a life-changing impact in the lives of 
-        vulnerable youths. Join us in empowering the next generation by donating
+        vulnerable youths.<br> Join us in empowering the next generation by donating
          today and creating a brighter future together</p>
     </div>
     <div class="div2">
@@ -104,12 +104,15 @@
         </div>
       </div>
     </div>
-    <h3 style="color: blue; font-family: Georgia, 'Times New Roman', Times, serif; align-items: center; text-align: center;">OR</h3>
-    <br><br>   <br><br>
-    <form><script src="https://checkout.razorpay.com/v1/payment-button.js" data-payment_button_id="pl_Go3nufVrD1W0GZ" async> </script> </form>
-    <br><br>   <br><br>
-    <h4 class="quote">The measure of life is not its duration, but its donation.</h4>
-    <h6 class="quote-name">~ Peter Marshall</h6>
+    <h3 style="color: blue; font-family: Georgia, 'Times New Roman', Times, serif; margin-left: 600px; text-align: center;"></h3>
+    <br><br>
+    <br><br>
+    <h4 class="quote">True generosity is an offering; given freely and out of pure love. No strings attached. No expectations.</h4>
+    <h6 class="quote-name">~ Suze Orman</h6>
+    <h4 class="quote">Charity begins at home, but should not end there.
+      <h6 class="quote-name">~ Thomas Fuller</h6>
+      <h4 class="quote">Within every act of donation lies the power to ignite positive change and shape a brighter future.
+        <h6 class="quote-name">~ Nelson Tommogo</h6>
     <!-- Site footer -->
     <footer class="site-footer">
       <div class="container">
